# book_crew_project

./: .gitignore  README.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: bookApi.js
frontend/src/components/: BookForm.jsx  BookViewer.jsx  LoadingScreen.jsx
frontend/src/utils/: downloadBook.js
src/my_book/: api.py  main.py  types.py
src/my_book/crews/outline_book_crew/: outline_crew.py
src/my_book/crews/outline_book_crew/config/: agents.yaml  tasks.yaml
src/my_book/crews/write_book_crew/: write_book_chapter_crew.py
src/my_book/crews/write_book_crew/config/: agents.yaml  tasks.yaml
