[project]
name = "my_book"
version = "0.1.0"
description = "my-book using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]==1.14.7",
    "litellm>=1.89.3",
]

[project.scripts]
kickoff = "my_book.main:kickoff"
run_crew = "my_book.main:kickoff"
plot = "my_book.main:plot"
run_with_trigger = "my_book.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
