[project]
name = "my_book"
version = "0.1.0"
description = "my-book using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]==1.14.7",
    "fastapi>=0.139.0",
    "google-genai>=2.11.0",
    "litellm>=1.89.3",
    "requests>=2.34.2",
    "uvicorn>=0.49.0",
]

[project.scripts]
kickoff = "my_book.main:kickoff"
run_crew = "my_book.main:kickoff"
start-api = "my_book.api:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
